exports[`addTokenPositions > blockquote 1`] = `
[
  {
    "type": "blockquote",
    "raw": "> line 1\\n> line 2",
    "tokens": [
      {
        "type": "paragraph",
        "raw": "line 1\\nline 2",
        "text": "line 1\\nline 2",
        "tokens": [
          {
            "type": "text",
            "raw": "line 1\\nline 2",
            "text": "line 1\\nline 2",
            "escaped": false,
            "position": {
              "lines": [
                {
                  "start": {
                    "offset": 2,
                    "line": 0,
                    "column": 2
                  },
                  "end": {
                    "offset": 8,
                    "line": 0,
                    "column": 8
                  }
                },
                {
                  "start": {
                    "offset": 11,
                    "line": 1,
                    "column": 2
                  },
                  "end": {
                    "offset": 17,
                    "line": 1,
                    "column": 8
                  }
                }
              ],
              "start": {
                "offset": 2,
                "line": 0,
                "column": 2
              },
              "end": {
                "offset": 17,
                "line": 1,
                "column": 8
              }
            }
          }
        ],
        "position": {
          "lines": [
            {
              "start": {
                "offset": 2,
                "line": 0,
                "column": 2
              },
              "end": {
                "offset": 8,
                "line": 0,
                "column": 8
              }
            },
            {
              "start": {
                "offset": 11,
                "line": 1,
                "column": 2
              },
              "end": {
                "offset": 17,
                "line": 1,
                "column": 8
              }
            }
          ],
          "start": {
            "offset": 2,
            "line": 0,
            "column": 2
          },
          "end": {
            "offset": 17,
            "line": 1,
            "column": 8
          }
        }
      }
    ],
    "text": "line 1\\nline 2",
    "position": {
      "lines": [
        {
          "start": {
            "offset": 0,
            "line": 0,
            "column": 0
          },
          "end": {
            "offset": 8,
            "line": 0,
            "column": 8
          }
        },
        {
          "start": {
            "offset": 9,
            "line": 1,
            "column": 0
          },
          "end": {
            "offset": 17,
            "line": 1,
            "column": 8
          }
        }
      ],
      "start": {
        "offset": 0,
        "line": 0,
        "column": 0
      },
      "end": {
        "offset": 17,
        "line": 1,
        "column": 8
      }
    }
  }
]
`;

exports[`addTokenPositions > example markdown 1`] = `
[
  {
    "type": "heading",
    "raw": "# example markdown",
    "depth": 1,
    "text": "example markdown",
    "tokens": [
      {
        "type": "text",
        "raw": "example markdown",
        "text": "example markdown",
        "escaped": false,
        "position": {
          "lines": [
            {
              "start": {
                "offset": 2,
                "line": 0,
                "column": 2
              },
              "end": {
                "offset": 18,
                "line": 0,
                "column": 18
              }
            }
          ],
          "start": {
            "offset": 2,
            "line": 0,
            "column": 2
          },
          "end": {
            "offset": 18,
            "line": 0,
            "column": 18
          }
        }
      }
    ],
    "position": {
      "lines": [
        {
          "start": {
            "offset": 0,
            "line": 0,
            "column": 0
          },
          "end": {
            "offset": 18,
            "line": 0,
            "column": 18
          }
        }
      ],
      "start": {
        "offset": 0,
        "line": 0,
        "column": 0
      },
      "end": {
        "offset": 18,
        "line": 0,
        "column": 18
      }
    }
  }
]
`;

exports[`markedTokenPosition > childTokens 1`] = `
[
  {
    "type": "space",
    "raw": "\\n",
    "position": {
      "lines": [
        {
          "start": {
            "offset": 0,
            "line": 0,
            "column": 0
          },
          "end": {
            "offset": 0,
            "line": 0,
            "column": 0
          }
        },
        {
          "start": {
            "offset": 1,
            "line": 1,
            "column": 0
          },
          "end": {
            "offset": 1,
            "line": 1,
            "column": 0
          }
        }
      ],
      "start": {
        "offset": 0,
        "line": 0,
        "column": 0
      },
      "end": {
        "offset": 1,
        "line": 1,
        "column": 0
      }
    }
  },
  {
    "type": "customTag",
    "raw": ":newTag:\\n**some text**\\n:\\n",
    "tag": "newTag",
    "text": "**some text**",
    "childTokens": [
      "myTokens"
    ],
    "myTokens": [
      {
        "type": "strong",
        "raw": "**some text**",
        "text": "some text",
        "tokens": [
          {
            "type": "text",
            "raw": "some text",
            "text": "some text",
            "escaped": false,
            "position": {
              "lines": [
                {
                  "start": {
                    "offset": 12,
                    "line": 2,
                    "column": 2
                  },
                  "end": {
                    "offset": 21,
                    "line": 2,
                    "column": 11
                  }
                }
              ],
              "start": {
                "offset": 12,
                "line": 2,
                "column": 2
              },
              "end": {
                "offset": 21,
                "line": 2,
                "column": 11
              }
            }
          }
        ],
        "position": {
          "lines": [
            {
              "start": {
                "offset": 10,
                "line": 2,
                "column": 0
              },
              "end": {
                "offset": 23,
                "line": 2,
                "column": 13
              }
            }
          ],
          "start": {
            "offset": 10,
            "line": 2,
            "column": 0
          },
          "end": {
            "offset": 23,
            "line": 2,
            "column": 13
          }
        }
      }
    ],
    "position": {
      "lines": [
        {
          "start": {
            "offset": 1,
            "line": 1,
            "column": 0
          },
          "end": {
            "offset": 9,
            "line": 1,
            "column": 8
          }
        },
        {
          "start": {
            "offset": 10,
            "line": 2,
            "column": 0
          },
          "end": {
            "offset": 23,
            "line": 2,
            "column": 13
          }
        },
        {
          "start": {
            "offset": 24,
            "line": 3,
            "column": 0
          },
          "end": {
            "offset": 25,
            "line": 3,
            "column": 1
          }
        },
        {
          "start": {
            "offset": 26,
            "line": 4,
            "column": 0
          },
          "end": {
            "offset": 26,
            "line": 4,
            "column": 0
          }
        }
      ],
      "start": {
        "offset": 1,
        "line": 1,
        "column": 0
      },
      "end": {
        "offset": 26,
        "line": 4,
        "column": 0
      }
    }
  }
]
`;

exports[`markedTokenPosition > childTokens 2`] = `
"<newTag><strong>some text</strong></newTag>"
`;

exports[`markedTokenPosition > example 1`] = `
[
  {
    "type": "heading",
    "raw": "# example markdown",
    "depth": 1,
    "text": "example markdown",
    "tokens": [
      {
        "type": "text",
        "raw": "example markdown",
        "text": "example markdown",
        "escaped": false,
        "position": {
          "lines": [
            {
              "start": {
                "offset": 2,
                "line": 0,
                "column": 2
              },
              "end": {
                "offset": 18,
                "line": 0,
                "column": 18
              }
            }
          ],
          "start": {
            "offset": 2,
            "line": 0,
            "column": 2
          },
          "end": {
            "offset": 18,
            "line": 0,
            "column": 18
          }
        }
      }
    ],
    "position": {
      "lines": [
        {
          "start": {
            "offset": 0,
            "line": 0,
            "column": 0
          },
          "end": {
            "offset": 18,
            "line": 0,
            "column": 18
          }
        }
      ],
      "start": {
        "offset": 0,
        "line": 0,
        "column": 0
      },
      "end": {
        "offset": 18,
        "line": 0,
        "column": 18
      }
    }
  }
]
`;

exports[`markedTokenPosition > example 2`] = `
"<h1>example markdown</h1>\\n"
`;

exports[`markedTokenPosition > list 1`] = `
[
  {
    "type": "list",
    "raw": "- example markdown",
    "ordered": false,
    "start": "",
    "loose": false,
    "items": [
      {
        "type": "list_item",
        "raw": "- example markdown",
        "task": false,
        "loose": false,
        "text": "example markdown",
        "tokens": [
          {
            "type": "text",
            "raw": "example markdown",
            "text": "example markdown",
            "tokens": [
              {
                "type": "text",
                "raw": "example markdown",
                "text": "example markdown",
                "escaped": false,
                "position": {
                  "lines": [
                    {
                      "start": {
                        "offset": 2,
                        "line": 0,
                        "column": 2
                      },
                      "end": {
                        "offset": 18,
                        "line": 0,
                        "column": 18
                      }
                    }
                  ],
                  "start": {
                    "offset": 2,
                    "line": 0,
                    "column": 2
                  },
                  "end": {
                    "offset": 18,
                    "line": 0,
                    "column": 18
                  }
                }
              }
            ],
            "position": {
              "lines": [
                {
                  "start": {
                    "offset": 2,
                    "line": 0,
                    "column": 2
                  },
                  "end": {
                    "offset": 18,
                    "line": 0,
                    "column": 18
                  }
                }
              ],
              "start": {
                "offset": 2,
                "line": 0,
                "column": 2
              },
              "end": {
                "offset": 18,
                "line": 0,
                "column": 18
              }
            }
          }
        ],
        "position": {
          "lines": [
            {
              "start": {
                "offset": 0,
                "line": 0,
                "column": 0
              },
              "end": {
                "offset": 18,
                "line": 0,
                "column": 18
              }
            }
          ],
          "start": {
            "offset": 0,
            "line": 0,
            "column": 0
          },
          "end": {
            "offset": 18,
            "line": 0,
            "column": 18
          }
        }
      }
    ],
    "position": {
      "lines": [
        {
          "start": {
            "offset": 0,
            "line": 0,
            "column": 0
          },
          "end": {
            "offset": 18,
            "line": 0,
            "column": 18
          }
        }
      ],
      "start": {
        "offset": 0,
        "line": 0,
        "column": 0
      },
      "end": {
        "offset": 18,
        "line": 0,
        "column": 18
      }
    }
  }
]
`;

exports[`markedTokenPosition > list 2`] = `
"<ul>\\n<li>example markdown</li>\\n</ul>\\n"
`;

exports[`markedTokenPosition > table 1`] = `
[
  {
    "type": "space",
    "raw": "\\n",
    "position": {
      "lines": [
        {
          "start": {
            "offset": 0,
            "line": 0,
            "column": 0
          },
          "end": {
            "offset": 0,
            "line": 0,
            "column": 0
          }
        },
        {
          "start": {
            "offset": 1,
            "line": 1,
            "column": 0
          },
          "end": {
            "offset": 1,
            "line": 1,
            "column": 0
          }
        }
      ],
      "start": {
        "offset": 0,
        "line": 0,
        "column": 0
      },
      "end": {
        "offset": 1,
        "line": 1,
        "column": 0
      }
    }
  },
  {
    "type": "table",
    "raw": "| a | b |\\n|---|---|\\n| 1 | 2 |\\n",
    "header": [
      {
        "text": "a",
        "tokens": [
          {
            "type": "text",
            "raw": "a",
            "text": "a",
            "escaped": false,
            "position": {
              "lines": [
                {
                  "start": {
                    "offset": 3,
                    "line": 1,
                    "column": 2
                  },
                  "end": {
                    "offset": 4,
                    "line": 1,
                    "column": 3
                  }
                }
              ],
              "start": {
                "offset": 3,
                "line": 1,
                "column": 2
              },
              "end": {
                "offset": 4,
                "line": 1,
                "column": 3
              }
            }
          }
        ],
        "header": true,
        "align": null
      },
      {
        "text": "b",
        "tokens": [
          {
            "type": "text",
            "raw": "b",
            "text": "b",
            "escaped": false,
            "position": {
              "lines": [
                {
                  "start": {
                    "offset": 7,
                    "line": 1,
                    "column": 6
                  },
                  "end": {
                    "offset": 8,
                    "line": 1,
                    "column": 7
                  }
                }
              ],
              "start": {
                "offset": 7,
                "line": 1,
                "column": 6
              },
              "end": {
                "offset": 8,
                "line": 1,
                "column": 7
              }
            }
          }
        ],
        "header": true,
        "align": null
      }
    ],
    "align": [
      null,
      null
    ],
    "rows": [
      [
        {
          "text": "1",
          "tokens": [
            {
              "type": "text",
              "raw": "1",
              "text": "1",
              "escaped": false,
              "position": {
                "lines": [
                  {
                    "start": {
                      "offset": 23,
                      "line": 3,
                      "column": 2
                    },
                    "end": {
                      "offset": 24,
                      "line": 3,
                      "column": 3
                    }
                  }
                ],
                "start": {
                  "offset": 23,
                  "line": 3,
                  "column": 2
                },
                "end": {
                  "offset": 24,
                  "line": 3,
                  "column": 3
                }
              }
            }
          ],
          "header": false,
          "align": null
        },
        {
          "text": "2",
          "tokens": [
            {
              "type": "text",
              "raw": "2",
              "text": "2",
              "escaped": false,
              "position": {
                "lines": [
                  {
                    "start": {
                      "offset": 27,
                      "line": 3,
                      "column": 6
                    },
                    "end": {
                      "offset": 28,
                      "line": 3,
                      "column": 7
                    }
                  }
                ],
                "start": {
                  "offset": 27,
                  "line": 3,
                  "column": 6
                },
                "end": {
                  "offset": 28,
                  "line": 3,
                  "column": 7
                }
              }
            }
          ],
          "header": false,
          "align": null
        }
      ]
    ],
    "position": {
      "lines": [
        {
          "start": {
            "offset": 1,
            "line": 1,
            "column": 0
          },
          "end": {
            "offset": 10,
            "line": 1,
            "column": 9
          }
        },
        {
          "start": {
            "offset": 11,
            "line": 2,
            "column": 0
          },
          "end": {
            "offset": 20,
            "line": 2,
            "column": 9
          }
        },
        {
          "start": {
            "offset": 21,
            "line": 3,
            "column": 0
          },
          "end": {
            "offset": 30,
            "line": 3,
            "column": 9
          }
        },
        {
          "start": {
            "offset": 31,
            "line": 4,
            "column": 0
          },
          "end": {
            "offset": 31,
            "line": 4,
            "column": 0
          }
        }
      ],
      "start": {
        "offset": 1,
        "line": 1,
        "column": 0
      },
      "end": {
        "offset": 31,
        "line": 4,
        "column": 0
      }
    }
  }
]
`;

exports[`markedTokenPosition > table 2`] = `
"<table>\\n<thead>\\n<tr>\\n<th>a</th>\\n<th>b</th>\\n</tr>\\n</thead>\\n<tbody><tr>\\n<td>1</td>\\n<td>2</td>\\n</tr>\\n</tbody></table>\\n"
`;
